added different bg task for better handeling
